# LLM-Benchmarker-Suite

./: .gitignore  README.md  compare_runner.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  anthropic_client.py  base_client.py  openai_client.py
data/: test_cases_consistency.json  test_cases_format.json  test_cases_instruction_following.json  test_cases_logic.json  test_cases_reasoning.json  test_cases_safety.json
evaluators/: __init__.py  base_evaluator.py  code_evaluator.py  consistency_evaluator.py  format_evaluator.py  hallucination_evaluator.py  llm_judge_evaluator.py  similarity_evaluator.py
tests/: test_format_evaluator.py  test_hallucination_evaluator.py  test_html_reports.py  test_llm_judge_evaluator.py  test_similarity_evaluator.py
utils/: __init__.py  evaluation_pipeline.py  html_comparison.py  html_primitives.py  html_report.py  logger.py  report_generator.py  stats.py
